# RAGAS-FINANCE

./: .gitattributes  .gitignore  Dockerfile.agent  Dockerfile.analytics  LICENSE  README.md  analytics_requirements.txt  docker-compose.rag.yml  docker-compose.yml  gitcmd  out.json  pyproject.toml  requirements.txt
.github/workflows/: integration-tests.yml  unit-tests.yml
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-03-21_06-54-44Z-document-parsing-and-file-analysis.md  2026-03-24_10-21-01Z-document-tagging-analysis-for-gaokaoyuwen.md  2026-03-26_08-18-16Z-sparse-retrieval-implementation-exploration.md  2026-03-26_08-18-20Z-summary-generation-and-ingestion-process.md  2026-03-26_12-34-48Z-finance-retrieval-stack-exploration.md  2026-03-26_12-34-48Z-finance-sql-retrieval-stack-exploration.md  2026-03-27_15-53-00Z-document-grouping-usage.md  2026-03-30_08-41-58Z-bocha-web-search-for-part-time-graduate-comments.md  2026-03-30_08-41-58Z-leads-extraction-for-part-time-graduate-studies.md  2026-03-30_08-41-58Z-part-time-graduate-studies-comments-extraction.md  2026-03-30_13-19-20Z-observability-solutions-for-finance-tool.md  2026-03-31_02-20-17Z-finance-rag-decision-making-process.md  2026-03-31_02-20-17Z-sql-facts-and-rag-retrieval-coordination.md  2026-04-01_08-49-11Z-md&a-narrative-analysis-and-alignment.md  2026-04-01_08-52-21Z-understanding-rag-pipeline-logic.md  2026-04-01_08-52-29Z-pre-rerank-pool-candidate-analysis.md  2026-04-01_08-55-54Z-pre-rerank-pool-candidate-analysis.md  (+9 more)
src/: start_fastapi.py
src/agent/: env.example  run_server.py
(+144 files in other folders)
